<resources>
    <string name="app_name">ListMaster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="title">title</string>
    <string name="content">content</string>
    <string name="date">date</string>
    <string name="create_date">create date</string>
    <string name="time">time</string>
    <string name="repeat">repeat</string>
    <string name="remind">remind</string>
    <string name="time_picker_title">select time</string>
    <string name="date_picker_title">select date</string>
    <string name="action_delete">delete</string>
    <string name="new_record">新建</string>

</resources>
