<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.ckt.cyl.listmaster.DetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:background="@drawable/background_et"
                        android:gravity="start"
                        android:hint="@string/title"
                        android:lines="4"
                        android:maxLines="4"
                        android:padding="8dp" />

                </android.support.design.widget.AppBarLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/jump_last"

                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/ic_alarm_on"
                    app:backgroundTint="@color/blue_grey_400"
                    app:elevation="8dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:pressedTranslationZ="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center_vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_time" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:hint="@string/create_date"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/item_date"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_rang" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:hint="@string/date"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/item_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_repeat" />

                        <TextView
                            android:id="@+id/mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:hint="@string/repeat"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/content"
                            android:maxEms="10"
                            android:maxLines="5" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </android.support.design.widget.CoordinatorLayout>

</layout>